EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==12/03/2010==
Caryatis: Fix for SpellResistChance effect.

Required SQL:
utils/sql/svn/1755_required_sql_fear_resist_aas.sql

==12/01/2010==
Caryatis: Fix for Reflect Spells and Healing Adept AAs
Caryatis: Showstats has been updated.

Required SQL:
utils/sql/svn/1754_required_sql_healing_adept_aa_fix.sql

Optional SQL:
utils/sql/svn/1753_optional_haste_cap_rule.sql

==11/30/2010==
Trevius: SoF+ - Stacked Potions will no longer show a factor of how many you have remaining in the potion belt.
Trevius: Increased the max spell ID allowed in the spell book from 20000 to 50000.
Derision: Underfoot. Corrected PP for LDoN points, Tribute and Leadership AA.  Corrected offset comments/unknown names.

==11/27/2010==
Derision: Renamed Live patch to Underfoot.
Derision: Added basic support for current live patch (HoT).
Caryatis: Reverted Bot changes due to crash issues
Caryatis: Reverted physical resist changes until we can find a more live-like solution
Caryatis: Gender Illusions are now functional
Caryatis: Implemented SE_Twinproc and Reflect spells

Note:

HoT support is limited to being able to enter a zone with spawns and items.
Combat, spells, moving items around, basically anything other than zoning, spawns, initial inventory load and movement will NOT work.
Note ZoneUnavailable is not implemented, so let at least one dynamic zone finish booting before attempting to enter.
This support is mainly to allow people to admire HoT zones, full playable HoT support is not planned at this time.

Optional SQL for zone and zonepoint table (thanks to robregen for the collects):

utils/sql/svn/1747_optional_HoT_zone_and_zonepoints.sql

For spawns etc, go to the PEQ logs repo for data collected by robregen.

Optional SQL: 

utils/sql/svn/1750_optional_sql_reflect_rule.sql

==11/24/2010==